<resources>
    <string name="app_name">UstadApp</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="nim_nip">NIM/NIP</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jurusan">Jurusan</string>
    <string name="no_hp">No Hp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="cari_ustad">Cari Ustad</string>
    <string name="daftar_ustad">Daftar Ustad</string>
    <string name="informasi_akun">Informasi Akun</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="keluar_aplikasi">Keluar Aplikasi</string>
    <string name="nama_ustad">Nama Ustad</string>
    <string name="default_name">Muhamad Mizwar</string>
    <string name="default_email">mizwar@gmail.com</string>
    <string name="default_nohp">082214140884</string>
    <string name="telepon">Telepon</string>
    <string name="kirim_pesan">Kirim Pesan</string>
    <string name="default_alamat">Jl. Kebon Jati Kab. Ciamis</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="universitas">Universitas</string>
    <string name="default_ttl">30 Maret 1995</string>
    <string name="default_jurusan">Teknik Informatika</string>
    <string name="default_univ">UIN Sunan Gunung Djati Bandung</string>
    <string name="edit_data">Edit Data</string>
    <string name="kembali">Kembali</string>
    <string name="sukses">Daftar Akun Berhasil</string>
    <string name="networkerror">Network Error</string>
    <string name="ServerError">Server Error</string>
    <string name="AuthFailureError">Auth failure</string>
    <string name="ParseError">Parse Error</string>
    <string name="NoConnectionError">No conection</string>
    <string name="TimeoutError">Request Timeout</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="API_KEY">AIzaSyB0CthD5EGZxQPjZeILxurc1JyH0tuyTCA</string>
    <string name="search_here">Search here</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="input_ustad">Input Ustad</string>
    <string name="edit_ustad">Edit Ustad</string>
    <string name="harga">Harga</string>
    <string name="bidang">Bidang</string>
    <string name="alamat">Alamat</string>
    <string name="email">Email</string>
</resources>
