<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sundevs.ihsan.ustadapp.view.activity.MainActivity">

    <include layout="@layout/header_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/text10dp">

        <ImageView
            android:layout_width="@dimen/dimen150dp"
            android:layout_height="@dimen/dimen150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/text10dp"
            android:layout_marginTop="@dimen/text10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/muslim" />

        <Button
            android:id="@+id/btn_cari_ustad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cari_ustad"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bnt_daftar_ustad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftar_ustad"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_informasi_akun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informasi_akun"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_tentang_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tentang_aplikasi"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_keluar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keluar_aplikasi"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>
