<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sundevs.ihsan.ustadapp.view.activity.DetailActivity">
    <include layout="@layout/header_app"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/text10dp">

    <ImageView
        android:layout_width="@dimen/dimen150dp"
        android:layout_height="@dimen/dimen150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen10dp"
        android:layout_marginTop="@dimen/dimen10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/muslim" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_ustad" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_email" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_hp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nama_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_name" />

                    <TextView
                        android:id="@+id/email_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_email" />

                    <TextView
                        android:id="@+id/nohp_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_nohp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen5dp"
                android:text="@string/telepon"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btn_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen5dp"
                android:text="@string/kirim_pesan"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btn_whatsapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen5dp"
                android:text="@string/whatsapp"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</LinearLayout>
