<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.MenuAdminActivity">
    <include layout="@layout/header_view"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen16"
        android:gravity="center">
        <Button
            android:id="@+id/btn_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_ustad"
            />
        <Button
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_ustad"
            android:layout_marginTop="@dimen/dimen8"/>
        <Button
            android:id="@+id/btn_keluar_ustad"
            android:text="@string/keluar_aplikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8"/>
    </LinearLayout>
</LinearLayout>